@@ -130,6 +130,8 @@ d7ea6fac9eb4b67717d2e0a24bca63865f45fdde assets/jurtaplex/models/item/basanite_b
 cdf80a10f9e62913df1c40c218a752d81f4b167e assets/jurtaplex/models/item/basanite_slab.json
 6d20f1c73523fc295e36ce22ed03d77379882959 assets/jurtaplex/models/item/basanite_stairs.json
 3c5489023305a87cffe8009e97c4e7c9c2957c39 assets/jurtaplex/models/item/basanite_wall.json
+8ccfcc430b1f96bf0c58b36eefa20cc1231b66d1 assets/jurtaplex/models/item/candy_apple.json
+86e3e9f7d346b00ebc1149c32b0a185a19a407ae assets/jurtaplex/models/item/caramel.json
 b46ff669c2fbb18b4067db9306013759ba75b73d assets/jurtaplex/models/item/cooked_flesh.json
 848cae15a6221d098c8558d3afb6725b6ef68730 assets/jurtaplex/models/item/diopside.json
 6f9cbb7dcb969fb2362a232730020f12d918bb24 assets/jurtaplex/models/item/diopside_axe.json
@@ -232,6 +234,9 @@ f73ae1cb33f7cd3a2f4ed357a3f1bf4c94d85026 data/jurtaplex/advancements/recipes/jur
 f397ad6ca03f17118b8fbc50d0989951a13c9afa data/jurtaplex/advancements/recipes/jurtaplex/basanite_stairs_from_basanite_stonecutting.json
 1fd906f6d7aab9cbecd29b968a4bad57bc901e75 data/jurtaplex/advancements/recipes/jurtaplex/basanite_wall.json
 a2c2ad3a63e89089caba90fcdd60e70b09fc0eec data/jurtaplex/advancements/recipes/jurtaplex/basanite_wall_from_basanite_stonecutting.json
+e96fb5b0dbc37f2a229344072a3d34141e44b12a data/jurtaplex/advancements/recipes/jurtaplex/candy_apple.json
+6ef28ce266ecc1059d1dfb9432794964cd094523 data/jurtaplex/advancements/recipes/jurtaplex/caramel.json
+2c315775925e1edae40f4520a66665ba6dc2d2f7 data/jurtaplex/advancements/recipes/jurtaplex/caramel_from_smoking.json
 7e1b157e2761592c4580deee61e6ca3df15098f3 data/jurtaplex/advancements/recipes/jurtaplex/cooked_flesh.json
 328e1e877cfe5b74d37459093a84b46897db4bfc data/jurtaplex/advancements/recipes/jurtaplex/cooked_flesh_from_campfire_cooking.json
 9465c7a99162ff9ef512835cb6c21d53c3b0a8de data/jurtaplex/advancements/recipes/jurtaplex/cooked_flesh_from_smoking.json
@@ -347,7 +352,10 @@ b1a585564fba9ef09e4919f2e8aa73c7cc982981 data/jurtaplex/recipes/basanite_slab_fr
 1e6b0e80b0d13dc030431dcc4a89849f61765fb8 data/jurtaplex/recipes/basanite_stairs_from_basanite_stonecutting.json
 9b5653cef11673fd6af9f031718d539b109b50e1 data/jurtaplex/recipes/basanite_wall.json
 a26e93c08c7c2b5e62d7d14383456f3be7f909c7 data/jurtaplex/recipes/basanite_wall_from_basanite_stonecutting.json
-ec5df340666cad16e89f9ef5ecefeca25cffcb58 data/jurtaplex/recipes/cooked_flesh.json
+8647b9aeb826c121ef7f0947bea1d5da3d201b66 data/jurtaplex/recipes/candy_apple.json
+4b2d8c8d0562b83da3370a48722d548068a873c0 data/jurtaplex/recipes/caramel.json
+21dbc3f6c321fa9b62dfaafa3fe9f0390af7c543 data/jurtaplex/recipes/caramel_from_smoking.json
+78372e985a09df5486a7912a03acd0c254785a5f data/jurtaplex/recipes/cooked_flesh.json
 d12d694f0bddb05e5ac7b75e08afd1178a7e6172 data/jurtaplex/recipes/cooked_flesh_from_campfire_cooking.json
 d9dae24c47aed614b38372caaaa55df7bfbc05eb data/jurtaplex/recipes/cooked_flesh_from_smoking.json
 043c3fc5c55fbab99ee9efcb91ea3e12d86bdae5 data/jurtaplex/recipes/diopside.json
