@@ -1,0 +1,9 @@
+{
+  "type": "minecraft:smelting",
+  "ingredient": {
+    "item": "minecraft:sugar"
+  },
+  "result": "jurtaplex:caramel",
+  "experience": 0.1,
+  "cookingtime": 200
+}
