@@ -1,6 +1,11 @@
 {
 	"itemGroup.jurtaplex": "\u30B8\u30E5\u30EB\u30BF\u30D7\u30EC\u30C3\u30AF\u30B9",
 	
+	"advancements.husbandry.candy_apple.title": "\u611B\u306E\u308A\u3093\u3054",
+	"advancements.husbandry.candy_apple.description": "\u308A\u3093\u3054\u98F4\u3092\u624B\u306B\u5165\u308C\u308B",
+	
+	"item.jurtaplex.candy_apple": "\u308A\u3093\u3054\u98F4",
+	"item.jurtaplex.caramel": "\u30AD\u30E3\u30E9\u30E1\u30EB",
 	"item.jurtaplex.cooked_flesh": "\u8ABF\u7406\u3057\u305F\u8089",
 	
 	"item.jurtaplex.garnet": "\u67D8\u69B4\u77F3",
